--- a/Main.css
+++ b/Main.css
@@ -6,33 +6,49 @@ html, body
 
 body
 {
-background-image: linear-gradient(to right top, #33a0f1, #2591d9, #1882c1, #0a73aa, #006494);
+	background-image: linear-gradient(to right top, #33a0f1, #2591d9, #1882c1, #0a73aa, #006494);
 }
 
 .header
 {
-	color: white;font-family: 'Yeon Sung';font-size: 45px;letter-spacing: 10px;margin-top: 80px;
+	color: yellow;
+	font-family: 'Yeon Sung';
+	font-size: 45px;
+	letter-spacing: 10px;
+	margin-top: 80px;
 }
 .header img
 {
-	width: 80px;margin-left: -15px;
+	width: 80px;
+	margin-left: -15px;
 }
 
 .login_div
 {
-	background: rgba(255,255,255,0.8);float: none;border-radius: 15px;
+	background: rgba(255,255,255,0.8);
+	float: none;
+	border-radius: 15px;
 }
 
 .logo
 {
-	width: 80px;margin-top: 30px;border-radius: 40px;
+	width: 80px;
+	margin-top: 30px;
+	border-radius: 40px;
 }
 
 #login_button
 {
-	width: 80%;border-radius: 15px;
+	width: 50%;
+	border-radius: 15px;
+	background-color: rgb(73, 190, 230);
+	color: rgb(240, 12, 31);
+	border-color: green;
+	border-style: dotted;
 }
-
+#login_button:hover{
+	background-color: green;
+}
 .room_name
 {
 	cursor: pointer;
@@ -42,13 +58,17 @@ background-image: linear-gradient(to right top, #33a0f1, #2591d9, #1882c1, #0a73
 
 #logout
 {
-	font-size: 20px; float: right;
+	font-size: 20px; 
+	float: right;
 }
 
 
 #output
 {
-	padding: 10px; width:80%;background: rgba(255,255,255,0.8);border-radius: 15px;
+	padding: 10px; 
+	width:80%;
+	background: rgba(255,255,255,0.8);
+	border-radius: 15px;
 }
 
 .input_div_room_page
@@ -58,13 +78,17 @@ background-image: linear-gradient(to right top, #33a0f1, #2591d9, #1882c1, #0a73
 
 .input_div label
 {
-	color: white;font-size: 20px;
+	color: white;
+	font-size: 20px;
 }
 
 
 .input_div_message_page
 {
-	position: fixed;bottom: 0px;width: 100%;background: rgba(255,255,255,0.8);
+	position: fixed;
+	bottom: 0px;
+	width: 100%;
+	background: rgba(255,255,255,0.8);
 }
 .input_div_message_page label
 {
@@ -90,5 +114,13 @@ background-image: linear-gradient(to right top, #33a0f1, #2591d9, #1882c1, #0a73
 }
 .message_h4
 {
-	padding-left:5px;color:grey;
+	padding-left:5px;
+	color:grey;
+}
+input:hover{
+	background-color: yellow;
+}
+#div:hover{
+	background-color: rgb(233, 144, 225);
+	width: 550px;
 }
